--- a/main.html
+++ b/main.html
@@ -28,9 +28,15 @@
                 <li>Networking</li>
             </ul>
         </section>
+        <section>
+            <h2>Contact Us</h2>
+            <p>Email: <a href="mailto:prometej.shop@gmail.com">prometej.shop@gmail.com</a></p>
+            <p>Phone: <a href="tel:+381646441527">+381 64 644 15 27</a></p>
+        </section>
     </main>
     <footer>
         <p>Contact us today and let's move towards success together!</p>
     </footer>
 </body>
 </html>
+
