--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <img src="logo.png" alt="Prometej Crew Logo" class="logo">
-        <h1>Welcome to Prometej Crew</h1>
-        <p>Where dreams become reality!</p>
+        <h1> Prometej Crew</h1>
+        <p>Mesto gde snovi postaju stvarnost!</p>
     </header>
     <main>
         <section>
@@ -93,7 +93,7 @@
         <section>
             <h2>Contact Us</h2>
             <p>Email: <a href="mailto:prometej.shop@gmail.com">prometej.shop@gmail.com</a></p>
-            <p>Phone: <a href="tel:+381646441527">+381 64 644 15 27</a></p>
+            <p>Telefon: <a href="tel:+381646441527">+381 64 644 15 27</a></p>
         </section>
     </main>
     <footer>
