--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </section>
     </main>
     <footer>
-        <p>Contact us today and let's move towards success together!</p>
+        <p>Kontaktirajte nas danas i krenimo zajedno ka uspehu!</p>
     </footer>
 
     <script>
