--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="prometej.jpg" alt="Prometej Crew Logo" class="logo">
-        <h1> Prometej Crew</h1>
-        <p>Mesto gde snovi postaju stvarnost!</p>
+        <img src="logo.png" alt="Prometej Crew Logo" class="logo">
+        <h1>Welcome to Prometej Crew</h1>
+        <p>Where dreams become reality!</p>
     </header>
     <main>
         <section>
@@ -93,11 +93,11 @@
         <section>
             <h2>Contact Us</h2>
             <p>Email: <a href="mailto:prometej.shop@gmail.com">prometej.shop@gmail.com</a></p>
-            <p>Telefon: <a href="tel:+381646441527">+381 64 644 15 27</a></p>
+            <p>Phone: <a href="tel:+381646441527">+381 64 644 15 27</a></p>
         </section>
     </main>
     <footer>
-        <p>Kontaktirajte nas danas i krenimo zajedno ka uspehu!</p>
+        <p>Contact us today and let's move towards success together!</p>
     </footer>
 
     <script>
