--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Prometej Crew Logo" class="logo">
+        <img src="prometej.jpg" alt="Prometej Crew Logo" class="logo">
         <h1>Welcome to Prometej Crew</h1>
         <p>Where dreams become reality!</p>
     </header>
